temp/main/default/objects/Account/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>Address_Account</relationshipName>
    <type>Lookup</type>
</CustomField>