temp/main/default/objects/Account/fields/Biggest_Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Deal_Amount__c</fullName>
    <label>Biggest Deal (Amount)</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>