temp/main/default/objects/Account/fields/parentid__c.field-meta.xml
<CustomField>
    <fullName>parentid__c</fullName>
    <formula>ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>parentid</label>
    <type>Text</type>
</CustomField>