temp/main/default/objects/Account/recordTypes/Company.recordType-meta.xml
<RecordType>
    <fullName>Company</fullName>
    <active>true</active>
    <description>A company we do business with</description>
    <label>Company</label>
</RecordType>